--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "react-scroll": "^1.9.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://tayyaba19.github.io/Tayyaba_Tabassum_v1",
-  "scripts": {"predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
