--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "your-project-name",
   "version": "0.1.0",
+  "homepage": "https://Tayyaba19.github.io/Tayyaba_Tabassum_v1",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
@@ -17,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
