--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "your-project-name",
   "version": "0.1.0",
-  "homepage": "https://Tayyaba19.github.io/Tayyaba_Tabassum_v1",
-  "private": true,
+  "homepage": "http://tayyaba19.github.io/Tayyaba-Tabassum-v1",
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
