--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "your-project-name",
   "version": "0.1.0",
   "homepage": "http://Tayyaba19.github.io/TayyabaV1",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
