--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "your-project-name",
   "version": "0.1.0",
-  "homepage": "http://Tayyaba19.github.io/TayyabaV1",
+  "homepage": "https://Tayyaba19.github.io/TayyabaV1",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
